# stock-crawler

./: .editorconfig  .gitignore  README.md  dump.rdb  pyproject.toml
.github/workflows/: gf-deploy.yaml
etc/: mergeCsv.sh  run.sh
notebook/: adhoc.ipynb  backtest.ipynb  result_analysis.ipynb
specification/: backtest.md  memcache.md  usage.md
src/: main.py  requirements.txt  runner.py
src/repository/: __init__.py
src/repository/drive/: __init__.py  google_drive.py
src/repository/memcache/: __init__.py  redis_labs.py
src/repository/sheet/: sheet.py
src/repository/stock/: __init__.py  stock.py
src/repository/stock_list/: __init__.py  stock_list.py
